--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <link href="js/jquery.magnific-popup.js" rel="stylesheet">
 </head>
 <body>
-    <!--PIZZA ICONS SECTION-->
+  
     <div class="container-fluid info p-2" id="top-icons">
         <div class="row">
             <div class="col d-flex justify-content-between aling-items-basline felx-wrap">
                 <div class="info-icons p-1">
                     <a href="#menu" class="mr-2 primary-color"><i class="fas fa-pizza-slice fa-3x"></i></a>
                 </div>
-                <h2 class="primary-color p-2 text-capitalize">#getyourpiecehot!!</h2>
+                <h2 class="primary-color p-2 text-capitalize">welcome to my pizza place</h2>
             </div>
         </div>
     </div>
-    <!--END OF PIZZA ICONS SECTION-->
+    <!--END OF PIZZA ICONS SECTION-s->
     <!--HEADER SECTION-->
     <header id="header">
         <div class="container">
