--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col">
                     <div class="banner text-center">
                         <h1 class="display-1 text-capitalize w-50 mx-auto">
-                            <small>your piece</small>
+                            <large> My pizza place</large>
                             <strong class="primary-color">pizza</strong>
                         </h1>
                         <a href="#form" class="btn main-btn pizza-btn my-4 text-capitalize">ORDER ONLINE</a>
