--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <div class="col">
                     <div class="banner text-center">
                         <h1 class="display-1 text-capitalize w-50 mx-auto">
-                            <small> My pizza place</small>
-                            
+                        
+                            <strong class="primary-color">my pizza place</strong>
                         </h1>
                         <a href="#form" class="btn main-btn pizza-btn my-4 text-capitalize">ORDER ONLINE</a>
                     </div>  
