--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <a href="https://www.twitter.com" target="_blank" class="mr-2 primary-color"><i class="fab fa-twitter fa-2x"></i></a>
                     <a href="https://www.youtube.com/channel/UCDE9D_2439Kro6tbYOB05HQ" target="_blank" class="mr-2 primary-color"><i class="fab fa-youtube fa-2x"></i></a>
                 </div>
-                <h2 class="primary-color p-2 text-capitalize"> KIREZI BANA HORTENSE </h2>
+                <h2 class="primary-color p-2 text-capitalize"> DONE BY KIREZI BANA HORTENSE </h2>
             </div>
         </div>
     </footer>
