--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>YOUR PIECE PIZZA</title>
+    <title>My pizza place</title>
   
     <link href="css/bootstrap.min.css" rel="stylesheet">
   
@@ -43,7 +43,7 @@
                     <div class="banner text-center">
                         <h1 class="display-1 text-capitalize w-50 mx-auto">
                         
-                            <strong class="primary-color">my pizza place</strong>
+                            <strong class="primary-color">My pizza place</strong>
                         </h1>
                         <a href="#form" class="btn main-btn pizza-btn my-4 text-capitalize">ORDER ONLINE</a>
                     </div>  
