--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
             <div class="row parent-container">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
-                        <img src="img/menu-item1.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
-                        <a href="img/menu-item1.jpeg">
+                        <img src="img/pizza2.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+                        <a href="img/pizza2.jpg">
                             <h1 class="text-uppercase text-center item-link px-3">
-                                Margherita
+                                dugri
                             </h1>
                         </a>
                     </div> 
                 </div>
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
-                        <img src="img/menu-item2.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
-                        <a href="img/menu-item2.jpeg">
+                        <img src="img/pizza1.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+                        <a href="img/pizza1.jpg">
                             <h1 class="text-uppercase text-center item-link px-3">
                                 Stromboli
                             </h1>
