--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     <!--END OF NAVBAR SECTION-->
     <!--MENU ITEMS SECTION-->
     <section class="py-5" id="special-items">
+        <div class="gallery">
+            <div class="flex-container">
+                <div class="gallery" id="fc">
         <div class="container my-5">
             <div class="row parent-container">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
@@ -86,7 +89,7 @@
                         <img src="img/menu-item3.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
                         <a href="img/menu-item3.jpeg">
                             <h1 class="text-uppercase text-center item-link px-3">
-                                Marinara
+                                sicilian
                             </h1>
                         </a>
                     </div> 
@@ -96,7 +99,7 @@
                         <img src="img/menu-item4.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
                         <a href="img/menu-item4.jpeg">
                             <h1 class="text-uppercase text-center item-link px-3">
-                                Neapolitan
+                                cheeze pizza
                             </h1>
                         </a>
                     </div> 
@@ -126,6 +129,9 @@
                     </div> 
                </div>
             </div>
+        </div>
+        </div>
+        </div>
         </div>
     </section>
     <!--END OF MENU ITEMS SECTION-->
