--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 </div>
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
-                        <img src="img/menu-item6.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
-                        <a href="img/menu-item6.jpeg">
+                        <img src="img/pizza3.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
+                        <a href="img/pizza3.jpeg">
                             <h1 class="text-uppercase text-center item-link px-3">
                                 Calzone
                             </h1>
@@ -207,7 +207,7 @@
                 <div class="single-item-text mt-5">
                     <h2 class="text-uppercase primary-color">+ Black olives</h2>
                     <h4 class="primary-color special-text">
-                        FREE WITH MARGARITA
+                        FREE WITH MARGARITA AND DRINKS
                     </h4>
                     <div class="single-item-price aling-self-end">
                         <h1 class="text-uppercase  primary-color test-dark">6000 RWF</h1>
