--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 </div>
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
-                        <img src="img/pizza3.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
-                        <a href="img/pizza3.jpeg">
+                        <img src="img/pizza3.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
+                        <a href="img/pizza3.jpg">
                             <h1 class="text-uppercase text-center item-link px-3">
                                 Calzone
                             </h1>
