--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <!--END OF NAVBAR SECTION-->
     <!--MENU ITEMS SECTION-->
+    <div class="img">
     <section class="py-5" id="special-items">
         <div class="gallery">
             <div class="flex-container">
@@ -74,6 +75,8 @@
                         </a>
                     </div> 
                 </div>
+            </div>
+            <div class="img">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
                         <img src="img/pizza1.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
@@ -84,6 +87,8 @@
                         </a>
                     </div> 
                 </div>
+            </div>
+            <div class="img">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
                         <img src="img/menu-item3.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
@@ -94,6 +99,8 @@
                         </a>
                     </div> 
                 </div>
+            </div>
+                <div class="img">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
                         <img src="img/menu-item4.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
@@ -104,6 +111,8 @@
                         </a>
                     </div> 
                 </div>
+            </div>
+                <div class="img">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
                         <img src="img/menu-item5.jpeg" class="img-fluid img-thumbnail item-img" alt="menu item">
@@ -118,6 +127,8 @@
                         </a>
                     </div> 
                 </div>
+                </div>
+                <div class="img">
                 <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
                     <div class="item-container">
                         <img src="img/pizza3.jpg" class="img-fluid img-thumbnail item-img" alt="menu item">
@@ -128,6 +139,7 @@
                         </a>
                     </div> 
                </div>
+            </div>
             </div>
         </div>
         </div>
