--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@
                         <div class="form-group">
                             <label for="toppings" class="lables"><b>Toppings:</b></label>
                             <select required class="form-control mb-2" id="topping">
-                                <option id="Mushrooms" value="150 KES Mushrooms" label="150 KES Mushrooms"></option>
-                                <option id="pepperoni" value="200 KES pepperoni" label="200 KES pepperoni"></option>
-                                <option id="Onions" value="100 KES Onions" label="100 KES Onions"></option>
-                                <option id="Extra cheese" value="150 KES Extra cheese" label="150 KES Extra cheese"></option>
-                                <option id="Black olives" value="150 KES Black olives" label="150 KES Black olives"></option>
-                                <option id="Pineapple" value="200 KES Pineapple" label="200 KES Pineapple"></option>
-                                <option id="Ham" value="100 KES Ham" label="100 KES Ham"></option>     
+                                <option id="Mushrooms" value="5000 RWF Mushrooms" label="5000 RWF Mushrooms"></option>
+                                <option id="pepperoni" value="2000 RWF pepperoni" label="200O RWF pepperoni"></option>
+                                <option id="Onions" value="1000 RWF Onions" label="1000 RWF Onions"></option>
+                                <option id="Extra cheese" value="1500 RWF Extra cheese" label="1500 RWF Extra cheese"></option>
+                                <option id="Black olives" value="1500 RWF Black olives" label="1500 RWF Black olives"></option>
+                                <option id="Pineapple" value="200O RWF Pineapple" label="200O RWF Pineapple"></option>
+                                <option id="Ham" value="10000 RWF Ham" label="10000 RWF Ham"></option>     
                             </select>
                         </div>
                         <label for="delivery" class="lables"><b>Delivery:</b></label>
