--- a/index.html
+++ b/index.html
@@ -324,41 +324,41 @@
                     <form action="" method="" id="form">
                         <label for="Pizza" class="lables"><b>Pizza:</b></label>
                         <select required class="form-control" id="pizza">
-                            <option id="Margherita" value="1000 KES Margherita">
+                            <option id="Margherita" value="1000 RWF Margherita">
                                 Margherita 10000 RWF
                             </option>
-                            <option id="Stromboli" value="1500 KES Stromboli">
+                            <option id="Stromboli" value="1500 RWF Stromboli">
                                 Stromboli 4000 RWF
                             </option>
-                            <option id="Marinara" value="2000 KES Marinara">
+                            <option id="Marinara" value="2000 RWF Marinara">
                                 Marinara 8000 RWF
                             </option>
-                            <option id="Neapolitan" value="1000 KES Neapolitan">
+                            <option id="Neapolitan" value="1000 RWF Neapolitan">
                                 Neapolitan ksh 1,000
                             </option>
-                            <option id="pepperoni" value="1500 KES pepperoni">
+                            <option id="pepperoni" value="1500 RWF pepperoni">
                                 pepperoni 6000 RWF
                             </option>
-                            <option id="Calzone" value="2000 KES Calzone">
+                            <option id="Calzone" value="2000 RWF Calzone">
                                Calzone 7000 RWF
                             </option>
                         </select>
                         <div class="form-group">
                             <label for="size" class="lables"><b>Pizza Size:</b></label>
                             <select required name="size" id="size" class="form-control">
-                                <option id="small" value="1000 KES small" label="small KES 1,000"></option>
-                                <option id="regular" value="1000 KES regular" label="regular KES 1,000"></option>
-                                <option id="medium" value="1500 KES Medium" label="Medium KES 1,500"></option>
-                                <option id="large" value="2000 KES large" label="Large KES 2,000"></option>
+                                <option id="small" value="1000 RWF small" label="small RWF 1,000"></option>
+                                <option id="regular" value="1000 RWF regular" label="regular RWF 1,000"></option>
+                                <option id="medium" value="1500 RWF Medium" label="Medium RWF 1,500"></option>
+                                <option id="large" value="2000 RWF large" label="Large RWF 2,000"></option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="crust" class="lables"><b>Pizza Crust:</b></label>
                             <select required name="crust" id="crust" class="form-control">
-                                <option id="Cheese-Stuffed"  value="Cheese-Stuffed ksh 250" label="Cheese-Stuffed ksh 250"></option>
-                                <option id="Neapolitan"  value="Neapolitan ksh 450" label="Neapolitan ksh 450"></option>
-                                <option id="Thin"  value="Thin ksh 150" label="Thin ksh 150"></option>
-                                <option id="flatbread"  value="Flatbread ksh 350" label="Flatbread ksh 350"></option>
+                                <option id="Cheese-Stuffed"  value="Cheese-Stuffed RWF 2500" label="Cheese-Stuffed ksh 250"></option>
+                                <option id="Neapolitan"  value="Neapolitan RWF 4500" label="Neapolitan RWF 450"></option>
+                                <option id="Thin"  value="Thin RWF 1500" label="Thin RWF 1500"></option>
+                                <option id="flatbread"  value="Flatbread RWF 3500" label="Flatbread RWF 3500"></option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -375,7 +375,7 @@
                         </div>
                         <label for="delivery" class="lables"><b>Delivery:</b></label>
                         <select required class="form-control" id="delivery">
-                            <option id="delivery1" value="200 KES delivery">Delivery 1000RWF</option>
+                            <option id="delivery1" value="2000 RWF delivery">Delivery 1000RWF</option>
                             <option id="pickup" value="pickup">pickup</option>
                         </select>
                         <form class="form-group checkout">
