--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         <div class="form-group">
                             <label for="crust" class="lables"><b>Pizza Crust:</b></label>
                             <select required name="crust" id="crust" class="form-control">
-                                <option id="Cheese-Stuffed"  value="Cheese-Stuffed RWF 2500" label="Cheese-Stuffed ksh 250"></option>
+                                <option id="Cheese-Stuffed"  value="Cheese-Stuffed RWF 2500" label="Cheese-Stuffed RWF 2500"></option>
                                 <option id="Neapolitan"  value="Neapolitan RWF 4500" label="Neapolitan RWF 450"></option>
                                 <option id="Thin"  value="Thin RWF 1500" label="Thin RWF 1500"></option>
                                 <option id="flatbread"  value="Flatbread RWF 3500" label="Flatbread RWF 3500"></option>
