--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             LIMITED EDITION
                     </h4>
                     <div class="single-item-price aling-self-end">
-                        <h1 class="text-uppercase primary-color test-dark">7000 RWF/h1>
+                        <h1 class="text-uppercase primary-color test-dark">7000 RWF</h1>
                     </div>
                 </div>
             </div>
